# pdf2audiobook

./: .gitignore  README.md  config.example.toml  pyproject.toml
src/pdf2audiobook/: __init__.py  checkpoint.py  cli.py  config.py  models.py  pipeline.py  progress.py  streaming.py  summary.py  webapp.py
src/pdf2audiobook/chunk/: __init__.py  chunker.py
src/pdf2audiobook/clean/: __init__.py  cleaner.py
src/pdf2audiobook/parse/: __init__.py  detector.py  docling_parser.py  pymupdf_parser.py
src/pdf2audiobook/static/: index.html
src/pdf2audiobook/synth/: __init__.py  base.py  chatterbox_tts.py  elevenlabs_tts.py  kokoro_tts.py  openai_tts.py  stitcher.py  synthesizer.py
tests/: create_test_pdf.py
